--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -498,7 +498,7 @@ stages:
           python -m venv env
           source env/bin/activate
   
-          pip install azdev pytest-json-report pytest-html pytest-rerunfailures
+          pip install azdev pytest-json-report pytest-html==3.2.0 pytest-rerunfailures
   
           azdev setup -c azure-cli -r azure-cli-extensions
           
@@ -1063,7 +1063,7 @@ stages:
           source env/bin/activate
           export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
   
-          pip install azdev pytest-json-report pytest-html pytest-rerunfailures
+          pip install azdev pytest-json-report pytest-html==3.2.0 pytest-rerunfailures
   
           azdev setup -c azure-cli -r azure-cli-extensions
           
@@ -1626,7 +1626,7 @@ stages:
           python -m venv env
           source env/Scripts/activate
   
-          pip install azdev pytest-json-report pytest-html pytest-rerunfailures
+          pip install azdev pytest-json-report pytest-html==3.2.0 pytest-rerunfailures
   
           azdev setup -c azure-cli -r azure-cli-extensions
           
