--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -498,6 +498,7 @@ stages:
           python -m venv env
           source env/bin/activate
   
+          # TODO: support pytest-html >= 4.0.0
           pip install azdev pytest-json-report pytest-html==3.2.0 pytest-rerunfailures
   
           azdev setup -c azure-cli -r azure-cli-extensions
@@ -1062,7 +1063,8 @@ stages:
           python -m venv env
           source env/bin/activate
           export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
-  
+          
+          # TODO: support pytest-html >= 4.0.0
           pip install azdev pytest-json-report pytest-html==3.2.0 pytest-rerunfailures
   
           azdev setup -c azure-cli -r azure-cli-extensions
@@ -1626,6 +1628,7 @@ stages:
           python -m venv env
           source env/Scripts/activate
   
+          # TODO: support pytest-html >= 4.0.0
           pip install azdev pytest-json-report pytest-html==3.2.0 pytest-rerunfailures
   
           azdev setup -c azure-cli -r azure-cli-extensions
