--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -661,7 +661,7 @@ jobs:
   dependsOn:
   - BuildRpmPackageMariner
   - ExtractMetadata
-  condition: and(succeeded(), in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI', 'Manual', 'Schedule'))
+#  condition: and(succeeded(), in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI', 'Manual', 'Schedule'))
   pool:
     name: $(pool)
   strategy:
