--- a/.github/policies/resourceManagement.yml
+++ b/.github/policies/resourceManagement.yml
@@ -858,7 +858,7 @@ configuration:
         - hasLabel:
             label: Service Attention
         - hasLabel:
-            label: Cosmos
+            label: CosmosDB
         then:
         - mentionUsers:
             mentionees:
@@ -3473,7 +3473,7 @@ configuration:
       - addLabel:
           label: CXP Attention
       - addLabel:
-          label: Cosmos
+          label: CosmosDB
       description: '[cosmosdb] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -3969,7 +3969,7 @@ configuration:
             isRegex: True
       then:
       - addLabel:
-          label: Cosmos
+          label: CosmosDB
       - addLabel:
           label: Auto-Assign
       - requestReview:
