Use docker-temp folder

--- a/.dockerignore
+++ b/.dockerignore
@@ -10,8 +10,8 @@
 !az.completion
 # Make an exception for the license file
 !LICENSE.txt
-# Make an exception for docker related files
-!docker/*
+# Make an exception for docker temp files when build images
+!docker-temp/*
 # Exclude build droppings, as mentioned in .gitignore
 src/build*
 # Exclude tests
