--- a/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
@@ -35,6 +35,9 @@ vmss create:
         disable_integrity_monitoring:
             rule_exclusions:
             - option_length_too_long
+        enable_integrity_monitoring:
+            rule_exclusions:
+            - option_length_too_long
         os_disk_security_encryption_type:
             rule_exclusions:
                 - option_length_too_long
@@ -95,6 +98,9 @@ vm create:
             rule_exclusions:
             - missing_parameter_help
         disable_integrity_monitoring:
+            rule_exclusions:
+                - option_length_too_long
+        enable_integrity_monitoring:
             rule_exclusions:
                 - option_length_too_long
         os_disk_security_encryption_type:
