--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,5 +2,4 @@ FROM mcr.microsoft.com/devcontainers/python:3.11
 
 RUN python -m venv env \
     && . env/bin/activate \
-    && python -m pip install --upgrade pip azdev \
-    && python -m pip install --upgrade azdev
+    && python -m pip install --upgrade pip azdev
