--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,10 +1,11 @@
 FROM mcr.microsoft.com/devcontainers/python:3.11
 
+ARG USER=vscode
 USER $USER
 ARG HOME="/home/$USER"
 
 RUN cd ${HOME} \
-    python -m venv env \
+    && python -m venv env \
     && . env/bin/activate \
     && python -m pip install --upgrade pip \
     && python -m pip install --upgrade azdev
