--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,9 @@
     },
     "customizations": {
       "vscode": {
+        "settings": {
+          "python.defaultInterpreterPath": "/home/vscode/venv/bin/python"
+        },
         "extensions": [
           "editorconfig.editorconfig",
           "github.vscode-pull-request-github",
