Update test name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1171,8 +1171,10 @@ jobs:
     - VerifyVersions
     - BuildWindowsMSI
     - TestMsiInstallation
-    - BuildDockerImage
-    - TestDockerImage
+    - BuildDockerImageAlpine
+    - TestDockerImageAlpine
+    - BuildDockerImageAzureLinux
+    - TestDockerImageAzureLinux
     - BuildPythonWheel
     - TestPythonWheel
     - TestCore
