--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -6,6 +6,7 @@ azure-appconfiguration==1.1.1
 azure-batch==14.0.0
 azure-cli-core==2.53.0
 azure-cli-telemetry==1.1.0
+azure-cli==2.53.0
 azure-common==1.1.22
 azure-core==1.26.0
 azure-cosmos==3.2.0
